--- a/style.css
+++ b/style.css
@@ -3,3 +3,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    background-color: rgb(78, 78, 78);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.map {
+    width: 70%;
+    background-color: rgb(28, 107, 81);
+    height: 40rem;
+}
