--- a/style.css
+++ b/style.css
@@ -29,12 +29,19 @@ body {
 
 main {
     height: 72.5rem;
+    display: flex;
 }
 
 .interface {
     width: 30%;
     height: 100%;
     background-color: #8EC5FF;
+}
+
+#map {
+    width: 70%;
+    height: 100%;
+    filter: saturate(1.5);
 }
 
 .map {
@@ -107,4 +114,50 @@ article > label {
     width: 80%;
     height: 60%;
     text-align: center;
+}
+
+.displayedSummary {
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(4, 1fr);
+    height: 100%;
+    color: #214f8a;
+}
+
+.summaryType {
+    align-self: self-start;
+    font-size: 2.5rem;
+    grid-column: 1/-1;
+}
+
+.displayedSummary > :not(:first-child) {
+    align-self: self-end;
+}
+
+.svgDistance {
+    position: relative;
+    left: 20%;
+}
+
+.svgDuration {
+    position: relative;
+    left: 8%;
+}
+
+.svgCadence {
+    position: relative;
+    left: 10%;
+}
+
+.svgSpeed {
+    position: relative;
+    left: 10%;
+}
+
+.displayedSummary > div > p {
+    font-size: 1.2rem;
+}
+
+svg {
+    margin-bottom: 1rem;
 }
