--- a/style.css
+++ b/style.css
@@ -1,168 +1,183 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 65.5%;
+  font-size: 65.5%;
 }
 
-input, select {
-    border: none;
-    font-family: 'Poppins', sans-serif;
-    outline: none;
+input,
+select {
+  border: none;
+  font-family: "Poppins", sans-serif;
+  outline: none;
 }
 
 body {
-    background-color: rgb(78, 78, 78);
-    font-family: 'Poppins', sans-serif;
+  background-color: rgb(78, 78, 78);
+  font-family: "Poppins", sans-serif;
 }
 
 .jadepineda {
-    height: 2.5rem;
-    font-size: 1.75rem;
-    background: #238B24;
-    color: white;
-    text-align: center;
+  height: 2.5rem;
+  font-size: 1.75rem;
+  background: #238b24;
+  color: white;
+  text-align: center;
 }
 
 main {
-    height: 72.5rem;
-    display: flex;
+  height: 72.5rem;
+  display: flex;
 }
 
 .interface {
-    width: 30%;
-    height: 100%;
-    background-color: #8EC5FF;
+  width: 30%;
+  height: 100%;
+  background-color: #8ec5ff;
 }
 
 #map {
-    width: 70%;
-    height: 100%;
-    filter: saturate(1.5);
+  width: 70%;
+  height: 100%;
+  filter: saturate(1.5);
 }
 
 .map {
-    width: 70%;
-    height: 100%;
+  width: 70%;
+  height: 100%;
 }
 
 .logoContainer {
-    height: 12.5rem;
-    text-align: center;
+  height: 12.5rem;
+  text-align: center;
 }
 
-
 .logo {
-    height: 100%;
-    width: auto;
+  height: 100%;
+  width: auto;
 }
 
 .workoutsContainer {
-    height: 57.5rem;
-    overflow: scroll;
+  height: 57.5rem;
+  overflow: scroll;
 }
 
 .specificWorkout {
-    margin: 0 auto;
-    width: 90%;
-    border-radius: 20px;
-    height: 15rem;
-    padding: 1.5rem;
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 0px );
-    -webkit-backdrop-filter: blur( 0px );
-    border-radius: 10px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+  margin: 0 auto;
+  width: 90%;
+  border-radius: 20px;
+  height: 15rem;
+  padding: 1.5rem;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .specificWorkout:hover {
-    background: rgba(255, 255, 255, 0.40);
+  background: rgba(255, 255, 255, 0.4);
 }
-
 
 .specificWorkout:not(:last-child) {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
-
 .logWorkout {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    height: 100%;
-    row-gap: 2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 100%;
+  row-gap: 2rem;
 }
 
 article > label {
-    font-size: 1.5rem;
-    color: #23508B;
-    font-weight: 700;
+  font-size: 1.5rem;
+  color: #23508b;
+  font-weight: 700;
 }
 
-.logWorkout > article, .determineContainer > *{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+.logWorkout > article,
+.determineContainer > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
-.logWorkout > article > input, .logWorkout > article > select, .determineContainer > * > input{
-    width: 80%;
-    height: 60%;
-    text-align: center;
+.logWorkout > article > input,
+.logWorkout > article > select,
+.determineContainer > * > input {
+  width: 80%;
+  height: 60%;
+  text-align: center;
 }
 
 .displayedSummary {
-    display: grid;
-    place-items: center;
-    grid-template-columns: repeat(4, 1fr);
-    height: 100%;
-    color: #214f8a;
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(4, 1fr);
+  height: 100%;
+  color: #214f8a;
 }
 
 .summaryType {
-    align-self: self-start;
-    font-size: 2.5rem;
-    grid-column: 1/-1;
+  align-self: self-start;
+  font-size: 2.5rem;
+  grid-column: 1/-1;
 }
 
 .displayedSummary > :not(:first-child) {
-    align-self: self-end;
+  align-self: self-end;
 }
 
 .svgDistance {
-    position: relative;
-    left: 20%;
+  position: relative;
+  left: 20%;
 }
 
 .svgDuration {
-    position: relative;
-    left: 8%;
+  position: relative;
+  left: 8%;
 }
 
 .svgCadence {
-    position: relative;
-    left: 10%;
+  position: relative;
+  left: 10%;
 }
 
 .svgSpeed {
-    position: relative;
-    left: 10%;
+  position: relative;
+  left: 10%;
 }
 
 .displayedSummary > div > p {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 svg {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
 }
 
 .leaflet-popup-content-wrapper {
-    background-color: #575757;
-    color: white;
+  background-color: #4f4f4f;
+  color: white;
+  padding-left: 0.5rem;
+  border-radius: 0;
+}
+
+.leaflet-container a.leaflet-popup-close-button {
+  color: white;
+}
+
+.running {
+  border-left: 10px solid rgb(255, 0, 0);
+}
+
+.cycling {
+  border-left: 10px solid rgb(255, 242, 0);
 }
