--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ main {
 .logWorkout {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  height: 100%;
+  height: 15rem;
   row-gap: 2rem;
 }
 
