--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
   font-family: "Poppins", sans-serif;
   max-height: 1861px;
   background-color: #8ec5ff;
-  min-width: 978px;
 }
 
 header {
@@ -33,11 +32,12 @@ header {
   justify-content: center;
   background: #238b24;
   color: white;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 main {
   height: 73rem;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -255,8 +255,32 @@ svg {
   }
 }
 
-
 @media (width < 64em) {
   .logWorkout {
     width: 100%;
   }
+}
+
+@media (width < 61em) {
+  .summaryType {
+    font-size: 1.7rem;
+  }
+}
+
+@media (width < 48em) {
+  main {
+    height: fit-content;
+  }
+  .mainWrapper {
+    flex-direction: column;
+    height: 200vh;
+  }
+  .mainWrapper > * {
+    width: 100%;
+    height: 40%;
+  }
+  #map {
+    width: 100%;
+    height: 50%;
+  }
+}
