--- a/style.css
+++ b/style.css
@@ -105,6 +105,15 @@ main {
   border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
+.specificWorkout[data-id="placeholder"] {
+  position: absolute;
+  top: 9999%;
+}
+
+.specificWorkout:focus {
+  border: 4px solid #214f8a;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
   border-radius: 20px;
